--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Bob Dylan, premio Nobel de la literatura</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="/css/estilos.css">
         <link href="https://fonts.cdnfonts.com/css/georgia" rel="stylesheet">             
     </head>
 
