--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <header>
                 <h1 class="menu__letras">Letras</h1>
                 <nav>
-                    <h2 class="menu__pagina-actual">Bob Dylan, premio Nobel de literatura 2016</h2>
-                    <h2 class="menu__enlace-pagina"><a class="menu__enlace-pagina--oculto" href="./html/premios.html">Premios Nobel de literatura (2013-2022)</a></h2>
-                    <h2 class="menu__enlace-pagina"><a class="menu__enlace-pagina--oculto" href="./html/motivacion_premios.html">Motivación de los premios (2013-2022)</a></h2>
+                    <h2 class="menu__item"><a class="menu__enlace menu__enlace--actual" href="../index.html">Bob Dylan, premio Nobel de literatura 2016</a></h2>
+                    <h2 class="menu__item"><a class="menu__enlace" href="./html/premios.html">Premios Nobel de literatura (2013-2022)</a></h2>
+                    <h2 class="menu__item"><a class="menu__enlace" href="./html/motivacion_premios.html">Motivación de los premios (2013-2022)</a></h2>
                 </nav>
             </header>
             <article class="article">
